更新jitpack打包脚本，解决pom文件里面无引用依赖的问题

--- a/jitpack.gradle
+++ b/jitpack.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.github.dcendents.android-maven'
 
 group = 'com.github.licheedev'
+version = '1.0'
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
