--- a/modbus4android/build.gradle
+++ b/modbus4android/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 8
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0.0"
+        targetSdkVersion 28
+        versionCode 2
+        versionName "2.0.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -28,10 +28,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     // rx全家桶
-    api 'io.reactivex.rxjava2:rxjava:2.2.6'
+    api 'io.reactivex.rxjava2:rxjava:2.2.7'
     api 'com.trello.rxlifecycle2:rxlifecycle-android:2.2.2'
     // 串口
-    api 'com.github.licheedev.Android-SerialPort-API:serialport:1.0.1'
+    api 'com.github.licheedev:Android-SerialPort-API:2.0.0'
     // modbus4j
     api 'com.github.licheedev:modbus4j:v3.0.6-alpha1'
 }
